--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
             </li>
             <li class="subsection-item">
               <h3 class="h3-title">
-                Filmoteka (team project) [HTML5, SASS, Rest API, Node.js/Parcel, JS]
+                Filmoteka (team project) [HTML5, SASS, Rest API, Node.js/Parcel,
+                JS]
               </h3>
               <p class="text">Role: developer</p>
               <p class="text">
@@ -175,8 +176,8 @@
             <li class="subsection-item">
               <h3 class="h3-title">WebStudio [HTML5, SASS, JS, Figma]</h3>
               <p class="text">
-                First project. Practice at markup. Responsive adaptive website
-                for WEbStudio company. Design according to specifications.
+                Responsive adaptive website for WEbStudio company. Design
+                according to specifications.
               </p>
               <div class="link-set">
                 <a
