--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
               </h3>
               <p class="text">Role: developer</p>
               <p class="text">
-                Team project. Design according to specifications. Application to
-                get popular movies, search by title and view details, save
-                watched movies and create a queue for watching
+                Application to get popular movies, search by title and view
+                details, save watched movies and create a queue for watching.
+                Design according to specifications.
               </p>
               <div class="link-set">
                 <a
@@ -153,9 +153,8 @@
               </h3>
               <p class="text">Role: developer</p>
               <p class="text">
-                Team projeсt. Landing for retail/wholesale company, which
-                represents the own capabilities. Design according to
-                specifications
+                Landing for retail/wholesale company, which represents the own
+                capabilities. Design according to specifications.
               </p>
               <div class="link-set">
                 <a
