--- a/index.html
+++ b/index.html
@@ -26,13 +26,19 @@
               I'm a Junior Full Stack developer who has technical skills
               acquired while working in the IT industry. I have fundamental
               knowledge and practical skills in HTML5, CSS3, SASS, JavaScript,
-              React, Redux, Node.js. Redux is an open source JavaScript library
-              for managing application state. Most often used in conjunction
-              with React or Angular for front-end development. Contains several
-              tools to greatly simplify the transfer of storage data through the
-              context. I try to constantly improve my level as a specialist and
-              I am looking for a company in which I could implement and improve
-              my skills and become part of the team.
+              React, Redux, Node.js. I try to constantly improve my level as a
+              specialist. First of all, I am looking for a project in which I
+              will be useful and could implement and improve my skills as a
+              developer. I like to work in a team of like-minded people who are
+              aimed at achieving a common result.
+            </p>
+            <p class="text">
+              I have experience in implementing ERP systems, developing and
+              implementing applications for production and financial management,
+              building, configuring and managing the network infrastructure of
+              an industrial enterprise, installing and configuring information
+              security systems. I hope to apply all my skills in achieving the
+              tasks assigned to me and I want to succeed...
             </p>
           </div>
         </section>
@@ -109,6 +115,7 @@
                 details, save watched movies and create a queue for watching.
                 Design according to specifications.
               </p>
+              <p></p>
               <div class="link-set">
                 <a
                   class="link link-bordered"
@@ -198,11 +205,12 @@
         </section>
         <section class="section">
           <h2 class="h2-title h2-underline">Work experience</h2>
-          <ul class="square-style">
+          <ul class="work-experience">
             <li class="subsection-item">
               <h3 class="h3-title company">
                 Private Joint Stock Company "Zaporizhzhya Iron Ore Plant"
               </h3>
+
               <p class="text job">
                 Senior System Software Engineer / System administrator
               </p>
@@ -219,12 +227,8 @@
               </ul>
             </li>
             <li class="subsection-item">
-              <h3 class="h3-title company">
-                Private Joint Stock Company "Zaporizhzhya Iron Ore Plant"
-              </h3>
               <p class="text job">Head of the IT-department</p>
               <p class="text text-accent">April 2014 - July 2018</p>
-              <p class="text location">Dniprorudne, Ukraine</p>
               <ul class="work-list">
                 <li class="work-list-item">IT-coordination</li>
                 <li class="work-list-item">ERP</li>
@@ -239,12 +243,8 @@
               </ul>
             </li>
             <li class="subsection-item">
-              <h3 class="h3-title company">
-                Private Joint Stock Company "Zaporizhzhya Iron Ore Plant"
-              </h3>
               <p class="text job">Deputy head of the IT-department</p>
               <p class="text text-accent">December 2009 - April 2014</p>
-              <p class="text location">Dniprorudne, Ukraine</p>
               <ul class="work-list">
                 <li class="work-list-item">IT-coordination</li>
                 <li class="work-list-item">ERP</li>
@@ -252,14 +252,10 @@
               </ul>
             </li>
             <li class="subsection-item">
-              <h3 class="h3-title company">
-                Private Joint Stock Company "Zaporizhzhya Iron Ore Plant"
-              </h3>
               <p class="text job">
                 Middle software engineer of the IT-department
               </p>
               <p class="text text-accent">January 2006 - December 2009</p>
-              <p class="text location">Dniprorudne, Ukraine</p>
               <ul class="work-list">
                 <li class="work-list-item">Software development.</li>
                 <li class="work-list-item">Customer support.</li>
@@ -267,14 +263,10 @@
               </ul>
             </li>
             <li class="subsection-item">
-              <h3 class="h3-title company">
-                Private Joint Stock Company "Zaporizhzhya Iron Ore Plant"
-              </h3>
               <p class="text job">
                 Junior software engineer of the IT-department
               </p>
               <p class="text text-accent">August 2000 - January 2006</p>
-              <p class="text location">Dniprorudne, Ukraine</p>
               <ul class="work-list">
                 <li class="work-list-item">
                   Maintenance of computing and peripheral equipment
@@ -289,7 +281,7 @@
         </section>
         <section class="section">
           <h2 class="h2-title h2-underline">Education</h2>
-          <ul class="square-style">
+          <ul class="work-experience">
             <li class="subsection-item">
               <h3 class="h3-title company">IT school GoIT</h3>
               <p class="text job">
