--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h3 class="h3-title">Junior Frontend developer</h3>
             <h2 class="h2-title h2-underline">Summary</h2>
             <p class="text">
-              I'm a Junior Full Stack developer who has technical skills
+              I'm a Junior Frontend Stack developer who has technical skills
               acquired while working in the IT industry. I have fundamental
               knowledge and practical skills in HTML5, CSS3, SASS, JavaScript,
               React, Redux, Node.js. I try to constantly improve my level as a
@@ -52,11 +52,16 @@
                   <div>
                     <h4 class="h4-title">
                       Redux/Redux-persist - Phonebook (store in localStorage)
-                      [React, Redux Toolkit, Redux-persist, JS]
+                      (single project) [React, Redux Toolkit, Redux-persist, JS]
                     </h4>
                     <p class="text">
                       Application for adding, deleting, filtering and storing
                       your own contacts on your gadget in localStorage
+                    </p>
+                    <p>
+                      First Redux project. I used state management with the
+                      Redux Toolkit library, also I used the Redux Persist
+                      library to save an array of contacts to local storage.
                     </p>
                   </div>
                   <div class="link-set">
@@ -78,12 +83,18 @@
                 <li>
                   <div>
                     <h4 class="h4-title">
-                      React: components & hooks - Movie finder [React,
-                      module.css, JS]
+                      React: components & hooks - Movie finder (single project)
+                      [React, module.css, JS]
                     </h4>
                     <p class="text">
-                      Application to get popular movies, search by title and
-                      view details. Single page application (SPA)
+                      First React project. Application to get popular movies,
+                      search by title and view details. Single page application
+                      (SPA)
+                    </p>
+                    <p>
+                      I signed up and got an API key to access data, and also
+                      used asynchronous loading of JS code for application
+                      routes.
                     </p>
                   </div>
                   <div class="link-set">
@@ -115,6 +126,10 @@
                 details, save watched movies and create a queue for watching.
                 Design according to specifications.
               </p>
+              <p class="text">
+                I worked on creating API classes, a loader/spinner, the
+                technical part of using a modal window.
+              </p>
               <p></p>
               <div class="link-set">
                 <a
@@ -133,10 +148,16 @@
               </div>
             </li>
             <li class="subsection-item">
-              <h3 class="h3-title">Image finder [HTML5, CSS, JS]</h3>
+              <h3 class="h3-title">
+                Image finder (single project) [HTML5, CSS, JS]
+              </h3>
               <p class="text">
                 Application for getting photos from API, search by name,
-                convenient pagination
+                convenient pagination.
+              </p>
+              <p class="text">
+                I studied API, pagination, infinite scroll, loader/spinner
+                technologies.
               </p>
               <div class="link-set">
                 <a
@@ -163,6 +184,11 @@
                 Landing for retail/wholesale company, which represents the own
                 capabilities. Design according to specifications.
               </p>
+              <p class="text">
+                I worked on the creation of the header, main menu and hero
+                section, having studied the technologies of using anchors, hover
+                effects, responsive and adaptive design.
+              </p>
               <div class="link-set">
                 <a
                   class="link link-bordered"
@@ -180,10 +206,16 @@
               </div>
             </li>
             <li class="subsection-item">
-              <h3 class="h3-title">WebStudio [HTML5, SASS, JS, Figma]</h3>
+              <h3 class="h3-title">
+                WebStudio (single project) [HTML5, SASS, JS, Figma]
+              </h3>
               <p class="text">
-                Responsive adaptive website for WEbStudio company. Design
-                according to specifications.
+                First HTML-project. Responsive adaptive website for WEbStudio
+                company. Design according to specifications.
+              </p>
+              <p class="text">
+                I learned how to work with Figma, how to create a multi-page
+                site, create modal windows, forms, checkboxes.
               </p>
               <div class="link-set">
                 <a
@@ -305,7 +337,7 @@
       <aside class="aside-section">
         <img
           class="aside-img"
-          src="./images/nikolin1.jpg"
+          src="./images/nikolin2.jpg"
           alt="Dmytro Nikolin"
         />
         <ul class="aside-inner subsection">
@@ -381,7 +413,6 @@
               <li>Redux</li>
               <li>REST API</li>
               <li>Webpack / Parcel</li>
-              <li>Node.js</li>
               <li>Figma</li>
             </ul>
           </li>
@@ -392,10 +423,6 @@
               <li>Hardworking</li>
               <li>Strong analytical thinking</li>
               <li>Willingness to learn</li>
-              <li>Attention to details</li>
-              <li>Quiet</li>
-              <li>Teamwork</li>
-              <li>Good communications</li>
             </ul>
           </li>
           <li class="aside-item">
