--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h3 class="h3-title">Junior Frontend developer</h3>
             <h2 class="h2-title h2-underline">Summary</h2>
             <p class="text">
-              I'm a Junior Frontend Stack developer who has technical skills
+              I'm a Junior Frontend developer who has technical skills
               acquired while working in the IT industry. I have fundamental
               knowledge and practical skills in HTML5, CSS3, SASS, JavaScript,
               React, Redux, Node.js. I try to constantly improve my level as a
